[package]
name = "jwl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
lazy_static = "1.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["blocking", "rustls-tls", "json"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
